--- a/vignettes/FRK_intro.Rnw
+++ b/vignettes/FRK_intro.Rnw
@@ -1,7 +1,7 @@
 \documentclass{article}
 
 %\VignetteEngine{knitr::knitr}
-%\VignetteIndexEntry{Spatial and spatio-temporal kriging with FRK}
+%\VignetteIndexEntry{Modelling of spatial and spatio-temporal non-Gaussian data with FRK}
 
 \usepackage{hyperref}
 \usepackage{subfig}
